Applications/HomeAssistant/base/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
  labels:
    reloader.stakater.com/reload: 'true' # Enables reloader for this namespace
