Applications/HomeAssistant/base/resources/network-policy-application-to-database.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: application-to-database
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: homeassistant-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: homeassistant
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: application
              app.kubernetes.io/name: homeassistant
      ports:
        - protocol: TCP
          port: 5432
