Applications/HomeAssistant/base/resources/network-policy-application-to-mqtt.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: application-to-mqtt
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: mqtt # The component within the architecture
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: homeassistant
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: application
              app.kubernetes.io/name: homeassistant
      ports:
        - protocol: TCP
          port: 8883
