Applications/HomeAssistant/base/resources/network-policy-clients-to-mqtt.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: clients-to-mqtt
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: mqtt  # The component within the architecture
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.0.0/8
        - ipBlock:
            cidr: 172.16.0.0/12
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - protocol: TCP
          port: 1883
        - protocol: TCP
          port: 8883
