Applications/HomeAssistant/base/resources/network-policy-editor-to-application.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: editor-to-application
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: application
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: homeassistant
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: editor
              app.kubernetes.io/name: homeassistant
      ports:
        - protocol: TCP
          port: 8123
