Applications/HomeAssistant/base/resources/network-policy-instance-to-instance.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: instance-to-instance
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: homeassistant-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: homeassistant-db
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8000
