Applications/HomeAssistant/base/resources/network-policy-kubeproxy-to-cluster.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubeproxy-to-cluster
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: homeassistant-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: ###CLUSTER_CIDR###
      ports:
        - protocol: TCP
          port: 8000
